[np-48098] refactor: Refactor tests for new endpoint (#82)
Tickets:
- https://sikt.atlassian.net/browse/NP-47325
- https://sikt.atlassian.net/browse/NP-48010

This PR sets up scaffolding for a new endpoint and refactors tests to
support this.
The existing endpoints contained several duplications and
re-implementations of similar code needed by the new endpoint, which
this PR attempts to centralize and simplify.